# fluidfoam_PH

./: .gitignore  ReadAndWriteEHLtest.py  averageT_fluidFoam.py  setup.cfg
fluidfoam/: ReadAndWriteEHLtest.py  __init__.py  fluidfoam_write.py  test_writeFields.py  test_writeFields_v2.py  writeOF.py
output_samples/ascii/0/: alpha_write_2
