[metadata]
name = fluidfoam
version = 0.3.0
author = Peyman havaej
author_email = peyman.havaej@gmail.com
description = Python tools to read and process OpenFOAM results
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/yourusername/fluidfoam
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    matplotlib
    scipy
    meshio
    pandas

[options.package_data]
* = *.py

[options.extras_require]
dev =
    build
    pytest
    black
    flake8

[tool:pytest]
testpaths = tests
